test/files/neg/t2458.check
test.scala:7: error: reference to X is ambiguous;
it is both defined in package p and imported subsequently by
import q.X
    def test = f(X)
                 ^
1 error
